# perception_pkg

./: CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: lane_detector.launch  object_detection.launch  object_detector.launch  perception.launch
model/: data.yaml
msg/: Bounding_box.msg  Bounding_box_array.msg  bounding_box.msg  bounding_box_array.msg
src/: centroid_point_cloud.py  image_processing.py  lane_detection.py  object_detection.py  object_detection_v8.py
